# sundarsoftware

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  tailwind.config.js
git_hooks/: pre-commit
static/: main.html
static/css/: styles.out.css  styles.tw.css
templates/: header_footer.html  main.html
