[project]
name = "sundarsoftware"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-annotations>=3.1.1",
    "flake8-return>=1.2.0",
]
